<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools = "http://schemas.android.com/tools"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "match_parent"
                                                   tools:context = ".MainActivity">

    <ImageView
        android:id = "@+id/image_product"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_marginBottom = "457dp"
        android:adjustViewBounds = "true"
        android:scaleType = "fitXY"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:srcCompat = "@drawable/hp_samsung" />

    <TextView
        android:id = "@+id/text_price"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "8dp"
        android:layout_marginEnd = "8dp"
        android:text = "@string/harga_produk"
        android:textColor = "@android:color/black"
        android:textSize = "32sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@id/image_product" />

    <TextView
        android:id = "@+id/text_title"
        android:layout_width = "393dp"
        android:layout_height = "27dp"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "8dp"
        android:layout_marginEnd = "8dp"
        android:text = "@string/nama_produk"
        android:textSize = "18sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/text_price" />

    <TextView
        android:id = "@+id/text_description"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "8dp"
        android:layout_marginEnd = "8dp"
        android:lineSpacingMultiplier = "1"
        android:text = "@string/deskripsi_produk"
        android:textColor = "@android:color/black"
        android:textSize = "15sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/text_title" />

    <TextView
        android:id = "@+id/text_penjual"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "8dp"
        android:layout_marginTop = "136dp"
        android:layout_marginEnd = "8dp"
        android:lineSpacingMultiplier = "1"
        android:text = "@string/penjual"
        android:textColor = "@android:color/black"
        android:textSize = "15sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "1.0"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/text_title" />

    <ImageView
        android:id = "@+id/image_penjual"
        android:layout_width = "67dp"
        android:layout_height = "65dp"
        android:layout_marginTop = "310dp"
        android:layout_marginBottom = "100dp"
        android:adjustViewBounds = "true"
        android:scaleType = "fitXY"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.023"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "0.845"
        app:srcCompat = "@drawable/foto" />

    <TextView
        android:id = "@+id/text_nama"
        android:layout_width = "306dp"
        android:layout_height = "34dp"
        android:layout_marginStart = "90dp"
        android:layout_marginTop = "210dp"
        android:layout_marginEnd = "8dp"
        android:text = "@string/namaku"
        android:textSize = "18sp"
        android:textStyle = "bold"
        app:layout_constraintBottom_toTopOf = "@+id/btn_beli"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.0"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/text_price"
        app:layout_constraintVertical_bias = "0.0" />

    <Button
        android:id = "@+id/btn_beli"
        android:layout_width = "362dp"
        android:layout_height = "52dp"
        android:layout_marginStart = "50dp"
        android:layout_marginTop = "20dp"
        android:layout_marginEnd = "50dp"
        android:text = "@string/button_beli"
        android:textSize = "22sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/image_penjual"
        tools:ignore = "MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
